src/edu/itsco/Parser.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.28+ wizard for JavaCC 1.5.0+
 */options{  static = true;}PARSER_BEGIN(Parser)package edu.itsco;
import java.util.ArrayList;
public class Parser{
  private static ArrayList<Variable> listaVariables;
    public static void main(String args []) throws ParseException, SemanticException  {
    listaVariables = new ArrayList<Variable>();    Parser parser = new Parser(System.in);    System.out.println("Bienvenidos al COMPILADOR de Brandito");
    System.out.println("-------------------------------------");
    parser.principal();
    System.out.println("Vas bien Brandito compilo exitosamente");  }

  private static void addVariable(Variable variable) throws SemanticException{
    if(listaVariables.contains(variable)) {
      throw new SemanticException(variable, SemanticException.VARIABLE_DUPLICATED);
    }else {
      listaVariables.add(variable);
      
      }
  }
  private static void existeVariable(String id) throws SemanticException {
    Variable v= new Variable();
    v.setId(id);
    if(!listaVariables.contains(v)) {
      throw new SemanticException(v, SemanticException.VARIABLE_NO_DEFINED);
    }
     }}PARSER_END(Parser)SKIP :{  " "| "\r"| "\t"| "\n"}

TOKEN: {
     < MAIN: "main" >
   | < END: "end" >

 | < INT: "int" >
 | < STRING: "string" >
 | < FLOAT: "float" >

| < VAR: "var" >

| < WRITE: "write" >
| < PRINT: "print" >
| < READ: "read" >

| < IF: "if" >
| < ELSE: "else" >
| < THEN: "then" >

| < SELECT: "select" >
| < CASE: "case" >
| < DEFECT: "defect" >
| < BREAK:"break" >

| < FOR: "for" >
| < UNTIL: "until" >
| < NEXT: "next" >

| < DOWHILE:"dowhile" >
| < WHILE:"while" >
}

TOKEN:{
  < PLUS: "+" >
| < SUBTRACTION: "-" >
| < MULTIPLICATION: "*" >
| < DIVISION: "/" >
| < MODULE: "%" >

| < HIGHER: ">" >
| < LESS: "<" >
| < SAME: "=" >

| < AND: "&&" >
| < OR: "||" >
| < NOT: "!" >

| < OP: "(" >
| < CP: ")" >

| < OPK: "{" >
| < CLK: "}" >

| < TP: ":" >
}


TOKEN: {
  <#lyrics: ["a"-"z", "A"-"Z"] >
 |<#digits: ["0"-"9"] >

| < ID: (< lyrics >| "_") (< lyrics > |< digits >|"_" )* >

| < VALUE_INT: (< digits >)* >
| < VALUE_FLOAT: (< digits >)* "." (< digits >)+ >
| < VALUE_STRING: "\"" (~["\""])* "\"" >

}

void principal () throws SemanticException : { }
{
  < MAIN > <ID >
  (
    sentences()  )+
  < END >
}
void sentences () throws SemanticException : { }
{
  declareVariable()
| grammarwrite()
| grammarread()
| grammarAssignment()
| grammarIF()
| grammarSelect()
| grammarFor()
| grammarWhile()
| grammarDowhile()
}
void declareVariable () throws SemanticException : {
Token tipoDato;
Token id;
boolean inicializada = false;
 }
{
  < VAR > id = < ID > tipoDato = typeDATA()
  [< SAME > value() { inicializada = true;}]
  {
    Variable var = new Variable(id.image, tipoDato.image);
    var.setEstainicializada(inicializada);
    addVariable(var);
  }
}
Token typeDATA (): {
Token tipoDato;
}
{
  (
    tipoDato = < INT > |tipoDato = < FLOAT > |tipoDato = < STRING >
  )
  {
    return tipoDato;
  }
}
void value () throws SemanticException : {
  token id; }
{
  < VALUE_INT > | < VALUE_FLOAT > | < VALUE_STRING > | id = < ID >
  {existeVariable(id.image); }
}
void grammarwrite () throws SemanticException: { }
{
  < WRITE > < OP > value() ( < PLUS > value())* < CP >  
}
void grammarread () throws SemanticException : { token id;}
{
  < READ > < OP > id= < ID > < CP >
  {existeVariable(id.image); }
}
void grammarAssignment () throws SemanticException : { token id;}
{
 id = < ID > < SAME > operationSimple()
 {existeVariable(id.image); }
}
void operationSimple () throws SemanticException : { }
{
  (value() | operationParentesis())
  (operatingArithmetic() (value() | operationParentesis()) )*
}
void operationParentesis () throws SemanticException : { }
{
  < OP > operationSimple() < CP >
}
void operatingArithmetic (): { }
{
  < PLUS > | < SUBTRACTION > | < MULTIPLICATION > | <  DIVISION > | < MODULE >
}
void grammarIF () throws SemanticException: { }
{
   < IF > < OP > condition() < CP > < THEN > < OPK >
     ( sentences() )+ < CLK >
     [< ELSE > < OPK > ( sentences() )+ < CLK > ]   < END ><IF > 
}
void condition () throws SemanticException : { }
{
  conditionSimple() (opLogical() conditionSimple())*
}
void conditionSimple ()throws SemanticException : { }
{
  value() opRelational() value()
}
void opLogical (): { }
{
  < AND > | < OR >
}
void opRelational (): { }
{
  < HIGHER > [< SAME >] | < LESS > [< SAME >]|< SAME >< SAME >| < NOT > [< SAME >]
}
void grammarSelect () throws SemanticException : { }
{
  < SELECT > < OP > < ID > < CP >
  (< CASE > < VALUE_INT > < TP > sentences() < BREAK >)+
  [< DEFECT > < TP > sentences() < BREAK >]
  < END > < SELECT >
}
void grammarFor () throws SemanticException : { }
{
  < FOR > < OP > < ID > < SAME > < VALUE_INT > < UNTIL > < SAME > < VALUE_INT > < CP >
  < OPK > (sentences())+ < CLK >
  < NEXT > 
}
void grammarWhile () throws SemanticException : { }
{
  < WHILE > < OP > condition() < CP >
  < OPK > (sentences())+ < CLK >
  < END > < WHILE >  
}
void grammarDowhile () throws SemanticException : { }
{
  < DOWHILE >
  < OPK >(sentences())+
  < END >< WHILE > < OP > condition() < CP >< CLK >
}
